<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tlPrincipal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/tlPrincipal"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnRadio"
        android:layout_width="194dp"
        android:layout_height="65dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="32dp"
        android:textSize="24sp"
        android:text="@string/btnRadio"
        android:backgroundTint="@color/btnRadio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tlPrincipal" />

    <Button
        android:id="@+id/btnCheck"
        android:layout_width="194dp"
        android:layout_height="65dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="28dp"
        android:textSize="24sp"
        android:text="@string/btnCheck"
        android:backgroundTint="@color/btnCheck"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRadio" />

    <Button
        android:id="@+id/btnSpinner"
        android:layout_width="194dp"
        android:layout_height="65dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="28dp"
        android:textSize="24sp"
        android:text="@string/btnSpinner"
        android:backgroundTint="@color/btnSpinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>